 2013-12-11 16:33  hvlad 
   M src/alice/alice_meta.epp
Fixed bug CORE-4297 : Gfix crashed when description of limbo transaction have size large than 1KB

 2013-12-10 08:56  dimitr 
   M doc/WhatsNew
Updated docs.

 2013-12-08 07:49  robocop 
   M src/jrd/jrd.cpp
   M src/jrd/os/darwin/config_root.cpp
   M src/jrd/os/darwin/mod_loader.cpp
   M src/jrd/trace/TraceConfigStorage.h
Misc.

 2013-12-06 15:52  roman-simakov 
   M src/utilities/nbackup.cpp
Hope the last fix of nbackup host case insensitive cutting. Sorry.

 2013-12-06 14:49  roman-simakov 
   M src/utilities/nbackup.cpp
Make comparing of host name case-insensitive

 2013-12-05 09:19  alexpeshkoff 
   M src/config/Args.cpp
   M src/dudley/ddl.cpp
   M src/dudley/lex.cpp
   M src/gpre/c_cxx.cpp
   M src/gpre/int_cxx.cpp
   M src/gpre/pat.cpp
   M src/gpre/pretty.cpp
   M src/lock/print.cpp
   M src/qli/lex.cpp
Committed reworked patch from Debian

 2013-12-04 16:24  roman-simakov 
   M builds/posix/Makefile.in.client.util
   M builds/posix/Makefile.in.embed.util
   M builds/win32/msvc10/nbackup.vcxproj
   M builds/win32/msvc10/nbackup.vcxproj.filters
   M builds/win32/msvc7/nbackup.vcproj
   M builds/win32/msvc8/nbackup.vcproj
   M builds/win32/msvc9/nbackup.vcproj
   M src/utilities/nbackup.cpp
Ignoring port for localhost in nbackup. Added check for localhost and error message if non localhost provided.

 2013-11-29 11:33  alexpeshkoff 
   M configure.in
   M src/jrd/common.h
   M src/jrd/inf_pub.h
   M src/jrd/pag.cpp
   M src/jrd/utl.cpp
Committed commented ARM64-linux port in order to reserve class ID for it

 2013-11-27 12:48  alexpeshkoff 
   M src/remote/server.cpp
Backported fix for CORE-4283: Resource temporarily unavailable errors while simultaneously registering events

 2013-11-15 15:12  dimitr 
   M src/jrd/irq.h
   M src/jrd/met.epp
Fixed CORE-4267: Server crashes while sweeping the database.

 2013-11-13 18:36  dimitr 
   M src/jrd/cch.cpp
   M src/jrd/cmp.cpp
   M src/jrd/inf.cpp